Fixing the build for securemock on java 17